tests/parser/bad/exps/exp_t-spid-lbrace-tid-type.scilexp
let a = tfun 'A => tfun 'B => fun (x : 'A) => x in
a {Bool field} 
